# rules_android_ndk

./: .bazelignore  .gitignore  BUILD  BUILD.empty.tpl  BUILD.ndk_clang.tpl  BUILD.ndk_root.tpl  BUILD.ndk_sysroot  BUILD.ndk_sysroot.tpl  BUILD.ndk_toolchain.tpl  MODULE.bazel  README.md  WORKSPACE  dummy_cc_toolchain.bzl.tpl  extension.bzl  extensions.bzl  ndk_cc_runtimes_toolchain.bzl  ndk_cc_toolchain_config.bzl  rules.bzl  sha256sums.bzl  target_systems.bzl  target_systems.bzl.tpl  update_github_workflows.sh
.bazelci/: presubmit.yml
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: release.yml  release_prep.sh
examples/basic/: .bazelrc  MODULE.bazel  README.md  WORKSPACE  bazel-basic  bazel-bin  bazel-out  bazel-testlogs
examples/basic/java/com/app/: AndroidManifest.xml  BUILD  Jni.java  MainActivity.java  jni.cc  jni_dep.cc  jni_dep.h
examples/cpu_features/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  jni.cc  jni_cpu_features_compat.cc
examples/disable_fallback_native_deps_linking/: .bazelrc  MODULE.bazel  README.md
examples/disable_fallback_native_deps_linking/java/com/app/: BUILD  Jni.java  jni2.cc  jni_dep.cc  jni_dep.h
examples/rules_foreign_cc/: .bazelrc  BUILD  WORKSPACE  platform_mappings
examples/rules_foreign_cc/java/com/app/: BUILD  Jni.java  MainActivity.java  jni.cc  jni_dep.cc  jni_dep.h
examples/rules_foreign_cc/java/com/app/res/layout/: main_layout.xml
examples/toolchain_features/: .bazelrc  MODULE.bazel
examples/toolchain_features/java/com/app/: AndroidManifest.xml  BUILD  Jni.java  MainActivity.java  jni.cc  jni_dep.cc  jni_dep.h
tests/cc_binary/: BUILD.bazel  MODULE.bazel
utils/: checksums.sh
