module(name = "basic_example")

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_android_ndk")
local_path_override(
    module_name = "rules_android_ndk",
    path = "../..",
)

android_ndk_repository_extension = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
use_repo(android_ndk_repository_extension, "androidndk")

register_toolchains("@androidndk//:all")

bazel_dep(name = "rules_android", version = "0.0.0")

# TODO: Replace this with a released version once an updated
# version is available on BCR.
git_override(
    module_name = "rules_android",
    commit = "e02da4d00ad81d44f1c8fd1b2ee46f057afdd392",
    remote = "https://github.com/bazelbuild/rules_android",
)

register_toolchains(
    "@rules_android//toolchains/android:android_default_toolchain",
    "@rules_android//toolchains/android_sdk:android_sdk_tools",
)

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")
